# opencrypto

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-tests.yml
examples/: bb_reversal_bot.py  simple_ma_bot.py
opencrypto/: __init__.py
opencrypto/backtest/: engine.py
opencrypto/core/: __init__.py  base_strategy.py  config.py  data_bridge.py  position_manager.py  shield_guard.py
opencrypto/indicators/: __init__.py  smart_money.py  technical.py
opencrypto/plugins/: charts.py  telegram.py
tests/: test_backtest.py  test_core.py  test_indicators.py  test_plugins.py  test_position_manager.py  test_shield_guard.py
